# lambda-bot

./: .gitignore  Dockerfile  Makefile  README.md  hello.py  pyproject.toml
.github/workflows/: deploy-dev.yaml  deploy-prod.yaml  pyright.yaml  ruff.yaml  terraform-job.yaml
app/: config.py  main.py
app/cmd/slack/: main.py
app/di/: slack.py
app/domain/arxiv/: client.py
app/domain/llm/: client.py
app/domain/model/: paper.py
app/domain/pdf/: model.py
app/infrastructure/arxiv/: client.py
app/infrastructure/secrets_manager/: get_secret.py
app/infrastructure/slack/: handler.py
app/usecase/summary/: summarize.py
terraform/envs/dev/: secrets_manager.tf  terraform.tf  variables.tf
terraform/envs/prod/: ecr.tf  lambda.tf  locals.tf  secrets_manager.tf  terraform.tf  variables.tf
terraform/envs/test/: api_gateway.tf  lambda.tf  secrets_manager.tf  terraform.tf  variables.tf
terraform/modules/api_gateway/: aws_apigatewayv2_api.tf  aws_apigatewayv2_integration.tf  aws_apigatewayv2_route.tf  aws_apigatewayv2_stage.tf  aws_cloudwatch_log_group.tf  aws_lambda_permission.tf  outputs.tf  variables.tf
terraform/modules/bootstrap/: aws_iam_openid_connect_provider.tf  aws_iam_policy_document.tf  aws_iam_role.tf  aws_iam_role_policy_attachment.tf  outputs.tf  variables.tf
terraform/modules/ecr/: aws_ecr_repository.tf  variables.tf
terraform/modules/lambda/: aws_cloudwatch_log_group.tf  aws_iam_policy_document.tf  aws_iam_role.tf  aws_iam_role_policy.tf  locals.tf  (+5 more)
terraform/shared/: bootstrap.tf  outputs.tf  secrets_manager.tf  terraform.tf  variables.tf
(+5 files in other folders)
