[project]
name = "lambda-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.23",
    "botocore>=1.38.23",
    "feedparser>=6.0.11",
    "google-genai>=1.16.1",
    "isort>=6.0.1",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.0",
    "slack-bolt>=1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
]
